add all funcionality
