# app/microservice/swagger.yml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
-  title: GFW Viirs Fires Forest API
-  description: Global Forest Watch - Viirs Fires Forest API
+  title: GFW Terrai Alerts API
+  description: Global Forest Watch - Terrai Alerts API
   version: "1.0.0"
 host: example.vizzuality.com
 
@@ -11,6 +11,7 @@ schemes:
 
 produces:
   - application/vnd.api+json
+
 # will be prefixed to all paths
 basePath: /api/v1
 
@@ -33,6 +34,11 @@ paths:
           description: Period of time (default last day)
           required: true
           type: string
+        - name: alertQuery
+          in: query
+          description: Add minimun date and maximun date to the result
+          required: false
+          type: boolean
       responses:
         200:
           description: Results obtained
@@ -74,6 +80,11 @@ paths:
           description: Period of time (default last day)
           required: true
           type: string
+        - name: alertQuery
+          in: query
+          description: Add minimun date and maximun date to the result
+          required: false
+          type: boolean
       responses:
         200:
           description: Results obtained
@@ -110,6 +121,11 @@ paths:
           description: Period of time (default last day)
           required: true
           type: string
+        - name: alertQuery
+          in: query
+          description: Add minimun date and maximun date to the result
+          required: false
+          type: boolean
       responses:
         200:
           description: Results obtained
@@ -147,6 +163,11 @@ paths:
           description: Period of time (default last day)
           required: true
           type: string
+        - name: alertQuery
+          in: query
+          description: Add minimun date and maximun date to the result
+          required: false
+          type: boolean
       responses:
         200:
           description: Results obtained
@@ -189,6 +210,11 @@ paths:
           description: Period of time (default last day)
           required: true
           type: string
+        - name: alertQuery
+          in: query
+          description: Add minimun date and maximun date to the result
+          required: false
+          type: boolean
       responses:
         200:
           description: Results obtained
@@ -286,5 +312,24 @@ definitions:
       value:
         type: number
         format: float
+      min-date:
+        type: string
+        format: date-time
+      max-date:
+        type: string
+        format: date-time
       period:
         type: string
+      download-urls:
+        type: object
+        properties:
+          csv:
+            type: string
+          geojson:
+            type: string
+          kml:
+            type: string
+          shp:
+            type: string
+          svg:
+            type: string
